Modify scripts to accomadate message element iterations